Import seed data
* Imported Ferry data
* Import Train comments
* Authors can be anonymous
* Import Bus rambles
* Add Sydney Buses to lookup table
* Add Bus Ramble fields to landing page

--- a/app/views/comments/_buses.haml
+++ b/app/views/comments/_buses.haml
@@ -14,6 +14,8 @@
   - @buses.each do |comment|
     %h2
       =h comment.transport.company if comment.transport.present?
+      =h comment.vehicle_driver_number
+      =h comment.incident_info
     %p
       - if comment.type == "Rave"
         %span.raveIcon
@@ -24,6 +26,6 @@
       %span.footer
         added by 
         %span.author
-          =h comment.author
+          =h comment.get_author
         on 
         =h comment.created_at.to_formatted_s(:date_time12)
