--- a/app/views/comments/_ferries.haml
+++ b/app/views/comments/_ferries.haml
@@ -26,6 +26,6 @@
       %span.footer
         added by 
         %span.author
-          =h comment.author
+          =h comment.get_author
         on 
         =h comment.created_at.to_formatted_s(:date_time12)
