--- a/app/views/comments/_drivers.haml
+++ b/app/views/comments/_drivers.haml
@@ -25,9 +25,9 @@
       %td
         =h comment.author
       %td
-        =h comment.vehicle_driver_number
+        =h comment.vehicle_no
       %td
-        =h comment.incident_info
+        =h comment.short_description
       %td
         =h comment.ramble
       / %td
