--- a/app/views/comments/_form_mobile.haml
+++ b/app/views/comments/_form_mobile.haml
@@ -13,7 +13,7 @@
     Bus Number
     %span.small
       Enter Bus Number
-  = f.text_field :vehicle_driver_number
+  = f.text_field :vehicle_no
       
   %label
     Bus Company
@@ -25,7 +25,7 @@
     Bus Direction
     %span.small
       Enter Bus Info
-  = f.text_field :incident_info
+  = f.text_field :short_description
 
   %label
     Ferry Line
