--- a/app/views/comments/_taxis.haml
+++ b/app/views/comments/_taxis.haml
@@ -25,7 +25,7 @@
       %td
         =h comment.author
       %td
-        =h comment.vehicle_driver_number
+        =h comment.vehicle_no
       %td
         =h comment.transport.company
       %td
