--- a/app/views/comments/_footer.haml
+++ b/app/views/comments/_footer.haml
@@ -1,3 +1,3 @@
 #footer
-  .owner created by ....
+  .owner created by OcuNecu in collaboration with davidtong 
   .disclaimer copyright &copy; 2010
