--- a/app/views/comments/_footer.haml
+++ b/app/views/comments/_footer.haml
@@ -1,3 +1,6 @@
 #footer
   .owner created by OcuNecu in collaboration with davidtong 
+  .owner
+    Please send feedback or comment to
+    %a{:href=>"mailto:info@trambles.com.au", :style=>"color:#fff;"} info@trambles.com.au
   .disclaimer copyright &copy; 2010
