--- a/app/views/raves/new.mobile.haml
+++ b/app/views/raves/new.mobile.haml
@@ -1,2 +1,3 @@
 - content_for :title, "#{params[:category]} Rave"
-= render :partial => 'comments/form_mobile'
+.edgetoedge
+  = render :partial => 'comments/form_mobile'
