--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -44,6 +44,11 @@ p, h1, form, button{border:0; margin:0; padding:0;}
 	text-align: center;
 }
 
+#header h4 {
+  text-align:center;
+}
+
+
 /* ----------- header ----------- */
 #footer {
   align:center;
