--- a/app/views/info/index.mobile.haml
+++ b/app/views/info/index.mobile.haml
@@ -3,7 +3,7 @@
 
 %ul
   %li
-    Anyone who uses public transport will have a use for Trambles. The more members of the public who participate, the great the number of experienced captured. Trambles provides a means for members of the public to share their experiences, offer praise when it is due and provide criticism when issues need to be addressed.
+    Anyone who uses public transport will have a use for Trambles. The more members of the public who participate, the greater the number of experience captured. Trambles provides a means for members of the public to share their experiences, offer praise when it is due and provide criticism when issues need to be addressed.
 
 %h1 OcuNecu
 %ul
