--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -12,4 +12,5 @@
     = javascript_include_tag 'jquery-1.4.2.min.js', 'application', 'facebox'
 
   %body
+    =render :partial => 'layouts/analytics'
     = yield
