--- a/app/views/layouts/application.mobile.haml
+++ b/app/views/layouts/application.mobile.haml
@@ -13,6 +13,7 @@
     = javascript_include_tag "/jqtouch/jquery.1.3.2.min.js", "/jqtouch/jqtouch.min.js", "mobile"
     = yield(:head)
   %body
+    =render :partial => 'layouts/analytics'
     .current
       .toolbar
         = link_to "Back", nil, :class => "back" unless current_page? root_path
