--- a/app/views/bus_rambles/index.mobile.haml
+++ b/app/views/bus_rambles/index.mobile.haml
@@ -13,4 +13,5 @@
             %span.raveIcon
           - else
             %span.rantIcon
-          =h comment.ramble
+          %span.label
+            =h comment.ramble
