--- a/app/views/layouts/application.mobile.haml
+++ b/app/views/layouts/application.mobile.haml
@@ -2,15 +2,16 @@
 %html{ "xml:lang" => "en", :lang => "en", :xmlns => "http://www.w3.org/1999/xhtml" }
   %head
     %meta{ :content => "text/html;charset=UTF-8", "http-equiv" => "content-type" }
-    %link{:rel=>"/apple-touch-icon", :href=>"images/icon.png"}
-    %link{:rel=>"/apple-touch-startup-image", :href=>"images/default.png"}
     %title
       -if current_page? root_url
         =h yield(:title)
       -else
         = controller.action_name.titleize
         = controller.controller_name.titleize
-      
+
+    %link{:rel=>"apple-touch-icon", :href=>"/images/icon.png"}
+    %link{:rel=>"apple-touch-startup-image", :href=>"/images/default.png"}
+    
     = stylesheet_link_tag "/jqtouch/jqtouch.min.css", "/jqtouch/themes/apple/theme.min.css", "mobile"
     = javascript_include_tag "/jqtouch/jquery.1.3.2.min.js", "/jqtouch/jqtouch.min.js", "mobile"
     
