[Mobile] Fixed issue with incorrect tramble colour headers
* Fixed error when determining if a comment is a rant or rave in the mobile views
* Add mobile js event for browser testing
* Applied colour codes to flash messages

--- a/app/views/bus_rambles/index.mobile.haml
+++ b/app/views/bus_rambles/index.mobile.haml
@@ -1,26 +1,20 @@
 - content_for :title, "Bus Rambles"
 - @buses.each do |comment|
-  - if comment.type == "Rave"
-    %ul
+  %ul
+    - if comment.class.name == "Rave"
       %li.rave
         %p
           =h comment.transport.company if comment.transport.present?
           =h comment.vehicle_no
           =h comment.short_description
-      %li
-        %p
-          =h comment.ramble
-        %p.author
-          ==added by #{comment.get_author} on #{comment.created_at.to_formatted_s(:date_time12)}
-  - else
-    %ul
+    - else
       %li.rant
         %p
           =h comment.transport.company if comment.transport.present?
           =h comment.vehicle_no
           =h comment.short_description
-      %li
-        %p
-          =h comment.ramble
-        %p.author
-          ==added by #{comment.get_author} on #{comment.created_at.to_formatted_s(:date_time12)}
+    %li
+      %p
+        =h comment.ramble
+      %p.author
+        ==added by #{comment.get_author} on #{comment.created_at.to_formatted_s(:date_time12)}
