--- a/app/views/layouts/application.mobile.haml
+++ b/app/views/layouts/application.mobile.haml
@@ -28,6 +28,6 @@
       - unless flash.empty?
         .info
           - flash.each do |name, msg|
-            = content_tag :div, msg, :id => "flash_\#{name}"
+            = content_tag :div, msg, :id => "flash_#{name}"
       = yield
     =render :partial => 'layouts/analytics'
