--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -381,3 +381,7 @@ display:block;
 	font-size:11px;
 	font-weight:bold;
 }
+
+#flash_success { color: green; }
+#flash_error { color: red; }
+#flash_notice { color: yellow; }
