--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -145,3 +145,7 @@ table {
   font-size: 12px;
   list-style: square;
 }
+
+#flash_success { color: green; }
+#flash_error { color: red; }
+#flash_notice { color: yellow; }
