Less uglier voting link than my first attempt

--- a/app/views/comments/_header.haml
+++ b/app/views/comments/_header.haml
@@ -1,9 +1,8 @@
 #header
   %h2 Trambles
   %h3 beta
-  %h4 Try out this website on your iPhone!
-  
-  / TODO: Damjan, feel free to fix this haha! 
-  %p{:style=>"text-align:center;"}
+  %h4
+    Try out this website on your iPhone!
+  %h4
     %a{:href=>"http://apps4nsw.uservoice.com/forums/35904-apps/suggestions/584259-trambles?ref=title", :target => "_blank"}
       %span{:style => "color:#fff;"}Vote us for apps4nsw&rsquo;s peoples choice award!
