* Amended web copy for vote link

--- a/app/views/comments/_header.haml
+++ b/app/views/comments/_header.haml
@@ -5,4 +5,5 @@
     Try out this website on your iPhone!
   %h4
     %a{:href=>"http://apps4nsw.uservoice.com/forums/35904-apps/suggestions/584259-trambles?ref=title", :target => "_blank"}
-      %span{:style => "color:#fff;"}Vote us for apps4nsw&rsquo;s peoples choice award!
+      %span{:style => "color:#fff;"}
+        Click here to vote for us @ apps4nsw&rsquo;s peoples choice award!
